--- a/src/app.scss
+++ b/src/app.scss
@@ -100,7 +100,7 @@ main {
           }
           small {
                a {
-                    color: $secondary;
+                    color: var(--secondary);
                }
           }
      }
@@ -122,7 +122,7 @@ main {
           color: #fff;
      }
      button {
-          background-color: $secondary;
+          background-color: var(--secondary);
           color: #fff;
           border: none;
           padding: .8rem;
@@ -154,7 +154,7 @@ main {
                min-height: 200px;
                height: auto;
                width: 80%;
-               background-color: $primary;
+               background-color: var(--primary);
                border-radius: 10px;
                display: flex;
                padding: 1rem 1.5rem;
@@ -197,7 +197,7 @@ main {
           max-width: 600px;
           width: 100vw;
           min-height: 100vh;
-          background-color: $primary;
+          background-color: var(--primary);
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -300,7 +300,7 @@ main {
      color: #eaeaea;
      h1 {
           font-size: 1.5rem;
-          color: $secondary;
+          color: var(--secondary);
      }
      >div {
           margin-top: 1rem;
@@ -311,7 +311,7 @@ main {
           text-decoration: none;
           color: inherit;
           &.active {
-               color: $secondary;
+               color: var(--secondary);
           }
           &.more {
                width: auto;
