--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,7 @@
      --secondary: #AA77FF;
      --third: #AA77FF;
      --fourth: #28282B;
+     --font-primary: 'Noto Sans', sans-serif;
      scroll-behavior: auto;
 }
 
@@ -23,7 +24,7 @@ p, h1, h2, h3, h4, h5 {
 
 body {
      width: 100vw;
-     font-family: 'Noto Sans', sans-serif;
+     font-family: var(--font-primary);
      overflow-x: hidden;
      background-color: var(--body-1);
 }
