--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&family=Open+Sans:wght@400;500;700&family=Poppins:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap');
 
 :root {
      --body-1: #151515;
@@ -12,6 +12,7 @@
 
 p, h1, h2, h3, h4, h5 {
      margin-bottom: 0;
+     font-family: "Noto Sans", sans-serif;
 }
 
 * {
@@ -24,7 +25,7 @@ p, h1, h2, h3, h4, h5 {
 
 body {
      width: 100vw;
-     font-family: var(--font-primary);
+     font-family: "Noto Sans", sans-serif;
      overflow-x: hidden;
      background-color: var(--body-1);
 }
